Kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accommodations-backend
  namespace: accommodations
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accommodations-backend
  template:
    metadata:
      labels:
        app: accommodations-backend
    spec:
      containers:
        - name: backend
          image: tammy38/renting-app-backend:latest
          ports:
            - containerPort: 9090
