Kubernetes/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accommodations-frontend
  namespace: accommodations
spec:
  replicas: 2
  selector:
    matchLabels:
      app: accommodations-frontend
  template:
    metadata:
      labels:
        app: accommodations-frontend
    spec:
      containers:
        - name: frontend
          image: tammy38/renting-app-frontend:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
