Kubernetes/statefulset.yml
#apiVersion: v1
#kind: PersistentVolume
#metadata:
#  name: db-storage
#  namespace: accommodations
#spec:
#  capacity:
#    storage: 1Gi
#  accessModes:
#    - ReadWriteOnce
#  hostPath:
#    path: /mnt/c/Users/Hristijan/Desktop/FINKI_6_SEMESTAR/KONTINUIRANA_INTEGRACIJA_I_ISPORAKA/New folder/Renting-app
#  persistentVolumeReclaimPolicy: Retain
#
#
#
#---
#
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: db-storage
#  namespace: accommodations
#spec:
#  accessModes:
#    - ReadWriteOnce
#  resources:
#    requests:
#      storage: 1Gi
#
#---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: accommodations
spec:
  serviceName: db
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
