Kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: accommodations-backend-service
  namespace: accommodations
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9090
      targetPort: 9090
  selector:
    app: accommodations-backend
