Kubernetes/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: accommodations
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: db
  type: ClusterIP
