Kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: accommodations-frontend-service
  namespace: accommodations
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 80
  selector:
    app: accommodations-frontend
